--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "express": "^4.16.4",
     "serve-static": "^1.13.2"
   },
+  "engines":{
+  "node":"10.15.3"
+  },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
