--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "t":"heroku-postbuild : npm install --only=dev --no-shrinkwrap && npm run build",
+  "t2":"build:node dist/build.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "start": "node server.js",
-    "build": "node build/build.js",
-    "heroku-postbuild": "npm install --only=dev --no-shrinkwrap && npm run build"
+    "start": "node server.js"
   },
   "proxy": "http://localhost:3000",
   "dependencies": {
