--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "t":"heroku-postbuild : npm install --only=dev --no-shrinkwrap && npm run build",
-  "t2":"build:node dist/build.js",
+  "t": "heroku-postbuild : npm install --only=dev --no-shrinkwrap && npm run build",
+  "t2": "build:node dist/build.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "start": "node server.js"
@@ -17,12 +17,13 @@
     "express": "^4.16.4",
     "serve-static": "^1.13.2"
   },
-  "engines":{
-  "node":"10.15.3"
+  "engines": {
+    "node": "10.15.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
     "@vue/cli-service": "^3.5.0",
+    "dotenv": "^7.0.0",
     "vue-template-compiler": "^2.5.21"
   },
   "postcss": {
