--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "t2": "build:node dist/build.js",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "axios": "^0.18.0",
